--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </defs>
           </svg>
           <br />
-          <h2>Learning</h2>
+          <p class="para">Learning</p>
           <p>Published 21 Dec 2023</p>
           <h1>HTML & CSS foundations</h1>
           <p>
