--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   </head>
   <body>
     <main>
-      <div class="card">
+      <a href="#">
+        <div class="card">
         <div class="innercard">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -31,6 +32,8 @@
             fill="none"
             viewBox="0 0 336 201"
           >
+            <title>This is blogcard preview</title>
+            <text class="visually-hidden" font-size="0">Blogcard preview</text>
             <g clip-path="url(#a)">
               <path fill="#F4D04E" d="M0 .5h336v200H0z" />
               <rect
@@ -125,16 +128,16 @@
           <br />
           <p class="para">Learning</p>
           <p>Published 21 Dec 2023</p>
-          <h1>HTML & CSS foundations</h1>
-          <p>
-            These languages are the backbone of every <br />
-            website, defining structure, content,<br />
+          <h1><a>HTML & CSS foundations</a></h1>
+          <p>These languages are the backbone of every</p>
+            <p>website, defining structure, content,</p>
             and presentation.
           </p>
-          <img src="assets/images/image-avatar.webp" />
-          <h3>Greg Hooper</h3>
+          <img src="assets/images/image-avatar.webp"/>
+          <p>Greg Hooper</p>
         </div>
       </div>
+      </a>
     </main>
     <footer class="attribution"></footer>
   </body>
